--- a/.config/polybar/modules/colors.ini
+++ b/.config/polybar/modules/colors.ini
@@ -1,8 +1,8 @@
 [colors]
 background = #66282A2E
-background-alt = #373B41
+background-alt = #373b41
 foreground = #FFFFFF
-primary = #F0C674
+primary = #bc4fc6
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
