--- a/.config/polybar/modules/colors.ini
+++ b/.config/polybar/modules/colors.ini
@@ -2,7 +2,7 @@
 background = #66282A2E
 background-alt = #373b41
 foreground = #FFFFFF
-primary = #bc4fc6
-secondary = #8ABEB7
-alert = #A54242
+primary = #ffbf00
+secondary = #ffbf00
+alert = #ffbf00
 disabled = #707880
